--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -33,7 +33,7 @@
                     <li data-icon="false"><a href="#" data-transition="slide" class="menuItem" template="planificacion"><i class="fa fa-calendar"></i> Planificación</a></li>
                     <li data-icon="false"><a href="#" data-transition="slide" class="menuItem" template="asistencia"><i class="fa fa-users"></i> Asistencia</a></li>
                 </ul>
-                <a href="#" id="btn-logout"><i class="fa fa-power-off"></i> Cerrar sesi&oacute;n</a>
+                <a href="#" id="btn-logout" class="btn"><i class="fa fa-power-off"></i> Cerrar sesi&oacute;n</a>
             </div>
             <div id="nav-header" data-role="header" data-position="fixed" data-tap-toggle="false" class="ui-bar">
                 <span id="backButton" class="fa-stack">
