--- a/www/index.html
+++ b/www/index.html
@@ -36,9 +36,8 @@
                 <a href="#" id="btn-logout" class="btn"><i class="fa fa-power-off"></i> Cerrar sesi&oacute;n</a>
             </div>
             <div id="nav-header" data-role="header" data-position="fixed" data-tap-toggle="false" class="ui-bar">
-                <span id="backButton" class="fa-stack">
-                    <i class="fa fa-circle-o fa-stack-2x"></i>
-                    <i class="fa fa-arrow-left fa-stack-1x"></i>
+                <span id="backButton">
+                    <i class="fa fa-chevron-left"></i>
                 </span>
                 <h1 id="header-title">Web Class</h1>
                 <div data-role="controlgroup" data-type="horizontal" class="ui-btn-right">
