--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -22,7 +22,7 @@
                     <div class="row">
                         <div class="col-xs-4"><i class="fa fa-user fa-3x"></i></div>
                         <div class="col-xs-8">
-                            <small class="muted">Profesor</small><br>
+                            <small id="rol-usuario" class="muted">Rol</small><br>
                             <span id="nombreUsuario">Nombre Apellido</span>
                         </div>
                     </div>
@@ -37,10 +37,16 @@
             </div>
             <div id="nav-header" data-role="header" data-position="fixed" data-tap-toggle="false" class="ui-bar">
                 <span id="backButton">
-                    <i class="fa fa-chevron-left"></i>
+                    <i class="fa fa-angle-left fa-2x"></i>
                 </span>
-                <h1 id="header-title">Web Class</h1>
-                <div data-role="controlgroup" data-type="horizontal" class="ui-btn-right">
+                <h1 id="header-title" class="pull-left">Web Class</h1>
+                <div data-role="controlgroup" data-type="horizontal" class="fixed-buttons ui-btn-right">
+					<span class="header-btn" href="#sync" id="btn-sync">
+						<center class="fa-stack fa-lg">
+							<i class="fa fa-cloud fa-stack-2x"></i>
+							<i class="fa fa-exchange fa-rotate-90 fa-stack-1x text-info"></i>
+						</center>
+					</span>
                     <span class="header-btn" href="#more" id="nav-more"><center><i class="fa fa-ellipsis-v fa-2x"></i></center></span>
                     <span class="header-btn" id="btn-menu_lateral"><center><i class="fa fa-bars fa-2x"></i></center></span>
                 </div>
